style.css
:root {
    --red-you-tube: #f00;
    --bg: #000;
    --bg-toggle: #0077FF;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;/* 10px */
}

body {
    background: var(--bg);
}

#form {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 80%;
}

/*----------------Input-----------------*/
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.input-group {
    display: flex;
    justify-content: center;
}

.input-group input,
.input-group button {
    font-size: 2rem;
    color: #fff;
    padding-left: 3rem;
    margin: 2rem;
    width: 50%;
    height: 40px;
    background: var(--red-you-tube);
    border-radius: 2rem;
    display: inline-block;
}

.input-group:hover input,
.input-group:hover button{
    opacity: 0.8;
}

.input-group input::placeholder {
    color: #fff;
    font-size: 2rem;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%)
}

.sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border-width: 0;
}

input::-webkit-calendar-picker-indicator {
    opacity: 0;
}

/* yt-video */
.yt-video-background,
button[onclick="Utils.toggle()"] {
    display: none;
}

.yt-video-background.on {
    background: var(--bg);
    width: 100%;
    height: 100%;

    position: absolute;
    z-index: 4;

    display: flex;
    justify-content: center;
    align-items: center;
}

button[onclick="Utils.toggle()"].on {
    color: #fff;
    background: var(--red-you-tube);
    width: 40px;
    height: 40px;
    border-radius: 2rem;
    border: none;

    position: absolute;
    top: 25px;
    left: 25px;
    z-index: 9;

    display: flex;
    justify-content: center;
    align-items: center;
}

.theme {
    margin: 2em 2em 0 0;
    cursor: pointer;
    width: 52px;
    height: 27px; 
    background: var(--bg-toggle);
    float: right;
    border-radius: 100px; 
    position: relative;
    z-index: 5;
}

.theme button {
    position: absolute;
    top: 3px;
    width: 20px;
    height: 20px;
    background-color: #fff;
    border-radius: 90px;
    border: none;
}

.theme.on button {
    left: 3px;
}
.theme button {
    right: 3px;
}

.off {
    display: none;
}

body::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

body::-webkit-scrollbar-track {
    background: var(--bg);        
}

body::-webkit-scrollbar-thumb {
    background-color: var(--red-you-tube);  
    border-radius: 0.5em;      
}

